--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@ html{
 }
 h1{
     margin-left:5%;
+    margin-bottom: 1%;
+    text-align: center;
 }
 canvas
 {
@@ -28,7 +30,7 @@ height: 700px;
 
 }
 .def{
-    width:50%;
+    width:80%;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
