--- a/index.css
+++ b/index.css
@@ -115,3 +115,15 @@ height: 700px;
         height:300px !important;
     }
 }
+
+@media only screen and (min-device-width : 481px) and (max-device-width : 1000px){
+    .container{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .btn{
+        width:80%; 
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
