--- a/index.css
+++ b/index.css
@@ -110,7 +110,10 @@ height: 700px;
         flex-direction: column-reverse;
         justify-content: center;
     }
-    
+    canvas{
+        width:80% !important;
+        height:400px !important;
+    }
 }
 
 @media only screen and (min-device-width : 481px) and (max-device-width : 1300px){
