--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ height: 700px;
 .btn{
     display: block;
     position:relative;
-   
+    width:300px;
     padding:0.3em ;
     font-size: 1em;
     border-radius: 5px;
