--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ height: 700px;
 #footer{
     text-align: center;
     padding: 1em;
-    position: absolute;
+    position: sticky;
     bottom: 0;
     background-color:#bdc3c7;
     box-shadow: 8px 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
