--- a/index.css
+++ b/index.css
@@ -32,6 +32,8 @@ height: 700px;
     display: block;
     position:relative;
     width:200px;
+    margin-left: auto;
+    margin-right: auto;
     padding:0.3em ;
     font-size: 1em;
     border-radius: 5px;
@@ -66,11 +68,7 @@ height: 700px;
     width: 100%;
     color: #303952;
 }
-.infos{
-    margin-top: 5%;
-    margin-left: 2%;
-    
-}
+
 .info{
     padding:0.3em ;  
     position: absolute;
@@ -96,18 +94,29 @@ height: 700px;
     text-align: center;
     /* top:15%; */
     color:#27ae60;
-    font-size: large;
-    margin-top: 1em;
+    width: 70%;
+
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    margin-left: auto;
+    margin-right: auto;
 }
 #newton-slider{
     display: none;
     margin-top:0.2em;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
 
 .label-slider{
     margin-bottom:2em;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
     display: none;
 }
 .modal {
