--- a/index.css
+++ b/index.css
@@ -53,7 +53,8 @@ height: 700px;
     min-height: 100vh;
 }
 .btns{
-    margin: 2%;    
+    margin-top: 2%;    
+    margin-left: 5%;
     display: flex;
     flex-direction: column;   
 }
