--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body{
 a{
     color: #27ae60;
     text-decoration: none;
+    
 }
 h1{
     margin-left:5%;
@@ -38,7 +39,8 @@ height: 700px;
     font-size: 1em;
     border-radius: 5px;
     margin-bottom: 1em;
-    background-color: #bdc3c7
+    background-color: #bdc3c7;
+    cursor: pointer;
 
 }
 .def{
@@ -106,6 +108,7 @@ height: 700px;
     display: none;
     margin-top:0.2em;
     width: 150px;
+    cursor: pointer;
     margin-left: auto;
     margin-right: auto;
 }
